outputs/csi500-test/treevoo/2025-07-28_01-48-42/problem_iter33_response1.txt_stdout.txt
Traceback (most recent call last):
  File "/home/renjunji_2023/reevo/problems/csi500/eval.py", line 9, in <module>
    import gpt
  File "/home/renjunji_2023/reevo/problems/csi500/gpt.py", line 24
    true_range = df[['high' - 'low', 'high' - 'close'].shift(1), 'close'].shift(1) - df['low']].max(axis=1)
                                                                                              ^
SyntaxError: unmatched ']'
